--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,10 +16,6 @@
   box-sizing: inherit;
 }
 
-html {
-  font-size: 16px;
-}
-
 input,
 textarea,
 button,
@@ -41,4 +37,56 @@ a {
 
 [data-rsbs-backdrop] {
   z-index: 99 !important;
+}
+
+.text-xs {
+  font-size: calc(var(--base-font-size) / 16 * 0.75rem);
+}
+
+.text-sm {
+  font-size: calc(var(--base-font-size) / 16 * 0.875rem);
+}
+
+.text-base {
+  font-size: calc(var(--base-font-size) / 16 * 1rem);
+}
+
+.text-lg {
+  font-size: calc(var(--base-font-size) / 16 * 1.125rem);
+}
+
+.text-xl {
+  font-size: calc(var(--base-font-size) / 16 * 1.25rem);
+}
+
+.text-2xl {
+  font-size: calc(var(--base-font-size) / 16 * 1.5rem);
+}
+
+.text-3xl {
+  font-size: calc(var(--base-font-size) / 16 * 1.875rem);
+}
+
+.text-4xl {
+  font-size: calc(var(--base-font-size) / 16 * 2.25rem);
+}
+
+.text-5xl {
+  font-size: calc(var(--base-font-size) / 16 * 3rem);
+}
+
+.text-6xl {
+  font-size: calc(var(--base-font-size) / 16 * 4rem);
+}
+
+.text-7xl {
+  font-size: calc(var(--base-font-size) / 16 * 5rem);
+}
+
+.text-8xl {
+  font-size: calc(var(--base-font-size) / 16 * 6rem);
+}
+
+.text-9xl {
+  font-size: calc(var(--base-font-size) / 16 * 7rem);
 }
